Improve `jpackage` options handling and integrate `jdeps` for dynamic module detection